--- a/src/app/shared/comps/fireworks/fireworks.component.scss
+++ b/src/app/shared/comps/fireworks/fireworks.component.scss
@@ -16,6 +16,7 @@ $box-shadow2: (
     top: 0;
     left: 0;
     user-select: none;
+    overflow: hidden;
 }
 
 @for $i from 0 through $particles {
