--- a/src/app/comps/jackpot-wheel/jackpot-wheel.component.scss
+++ b/src/app/comps/jackpot-wheel/jackpot-wheel.component.scss
@@ -1,7 +1,7 @@
 $border: 2px solid black;
 $box: 100px;
 $rand: random(99);
-$winnerPos: calc(28400 + $rand);
+
 
 .wheel-wrapper {
     width: 1200px;
@@ -15,11 +15,19 @@ $winnerPos: calc(28400 + $rand);
         position: absolute;
         display: flex;
         left: 0;
+        transform: translateX(0px);
+        transition: transform 20s;
+        transition-delay: 1s;
+        transition-timing-function: cubic-bezier(.19, .98, .22, 1);
     }
 
+
+    $winnerPos: 28400;
+
     .start {
-        animation: spin 20s cubic-bezier(.19, .98, .22, 1) 1000ms forwards;
+        // transform: translateX(calc(-1rem * $winnerPos + #{attr('random')}px));
     }
+
 
     .arrow {
         position: absolute;
@@ -57,15 +65,5 @@ $winnerPos: calc(28400 + $rand);
         width: 100%;
         height: 115px;
         box-shadow: -15px 0px 24px rgba(0, 0, 0, 0.5) inset;
-    }
-}
-
-@keyframes spin {
-    0% {
-        left: 0;
-    }
-
-    100% {
-        left: calc(($winnerPos) * -1px);
     }
 }
