--- a/src/app/comps/jackpot-wheel/jackpot-wheel.component.html
+++ b/src/app/comps/jackpot-wheel/jackpot-wheel.component.html
@@ -1,5 +1,5 @@
 <div class="wheel-wrapper">
-    <div class="item-wrapper" [class.start]="start" #itemWrapper>
+    <div class="item-wrapper" #itemWrapper>
         <app-box *ngFor="let item of items" [name]="item?.name" [colour]="item?.colour"></app-box>
     </div>
     <div class="arrow"></div>
