--- a/src/app/comps/item-editor/item-editor.component.scss
+++ b/src/app/comps/item-editor/item-editor.component.scss
@@ -1,3 +1,12 @@
+:host {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
 textarea {
     min-height: 200px;
+    width: min(500px, 90%);
+    margin-inline: auto;
+    margin-top: 2rem;
 }
